prow/cluster/gcsweb_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gcsweb
  namespace: gcs
  labels:
    app.kubernetes.io/part-of: gcsweb
    app: gcsweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gcsweb
  template:
    metadata:
      labels:
        app: gcsweb
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: nginx-proxy
        image: nginx:1.21
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx
          mountPath: /etc/nginx/conf.d
      - name: gcsweb
        image: k8s.gcr.io/gcsweb-amd64:v1.0.6
        args:
        - -b=maistra-prow-testing
        - -p=8080
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 0.1
            memory: 128Mi
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 3
          timeoutSeconds: 2
          failureThreshold: 2
      volumes:
      - name: nginx
        configMap:
          name: nginx
