prow/cluster/smee-client_deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: smee-client
  labels:
    app: smee-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smee-client
  template:
    metadata:
      name: smee-client
      labels:
        app: smee-client
    spec:
      containers:
        - name: smee-client
          image: quay.io/maistra/istio-workspace-smee-client:latest
          imagePullPolicy: Always
