prow/cluster/bazel-cache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazel-cache
  namespace: ${NAMESPACE}
spec:
  selector:
    app: bazel-cache
  ports:
  - name: http
    port: 80
  type: ClusterIP
