prow/cluster/ghproxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ${NAMESPACE}
  name: ghproxy
  labels:
    app: ghproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghproxy
  template:
    metadata:
      labels:
        app: ghproxy
    spec:
      tolerations:
      - key: "node-role.kubernetes.io/master"
        operator: "Exists"
        effect: "NoSchedule"
      nodeSelector:
        kubernetes.io/hostname: prow-master-03 # This could be a proper label such as `role: ghproxy`

      containers:
      - name: ghproxy
        image: gcr.io/k8s-prow/ghproxy:v20220822-b3a9f2479e
        args:
        - --cache-dir=/cache
        - --cache-sizeGB=1
        - --serve-metrics=false
        ports:
        - name: main
          containerPort: 8888
        volumeMounts:
        - name: cache
          mountPath: /cache
      volumes:
      - name: cache
        hostPath:
          path: /mnt/ghproxy-cache
          type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ghproxy
  namespace: ${NAMESPACE}
  name: ghproxy
spec:
  ports:
  - name: main
    port: 80
    protocol: TCP
    targetPort: 8888
  selector:
    app: ghproxy
