prow/cluster/patch_propagator_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: prow-patch-propagator
spec:
  selector:
    app: prow-patch-propagator
  ports:
    - port: 80
      targetPort: 8888
  type: NodePort
