prow/cluster/gcsweb_ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/part-of: gcsweb
  name: gcsweb-ing
  namespace: gcs
  annotations:
    cert-manager.io/issuer: letsencrypt-gcsweb
spec:
  backend:
    serviceName: gcsweb
    servicePort: 80
  rules:
  - host: gcsweb.maistra.io
    http:
      paths:
      - path: /
        backend:
          serviceName: gcsweb
          servicePort: 80
  tls:
  - hosts:
    - gcsweb.maistra.io
    secretName: gcsweb.maistra.io-cert
