prow/cluster/routes.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: deck
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  host: prow.apps.maistra-ci.devcluster.openshift.com
  port:
    targetPort: 8080
  subdomain: ""
  to:
    kind: Service
    name: deck
    weight: 100
  wildcardPolicy: None
status:
  ingress: []

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hook
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  host: prow.apps.maistra-ci.devcluster.openshift.com
  path: /hook
  port:
    targetPort: 8888
  subdomain: ""
  to:
    kind: Service
    name: hook
    weight: 100
  wildcardPolicy: None
status: 
  ingress: []
